// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer[Base] should render correctly about base 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: 400px;"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Drawer Title
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.73895 2.81241L3.80175 2.86787L8 7.05665L12.2379 2.81922C12.4983 2.55888 12.9204 2.55888 13.1808 2.81922C13.4211 3.05955 13.4396 3.4377 13.2362 3.69923L13.1808 3.76203L8.94334 7.99998L13.1376 12.1948C13.398 12.4552 13.398 12.8773 13.1376 13.1376C12.8973 13.3779 12.5192 13.3964 12.2576 13.1931L12.1948 13.1376L8 8.94332L3.78745 13.1553C3.5271 13.4156 3.10499 13.4156 2.84464 13.1553C2.60432 12.9149 2.58583 12.5368 2.78918 12.2753L2.84464 12.2124L7.05667 7.99998L2.85894 3.81068C2.59859 3.55033 2.59859 3.12822 2.85894 2.86787C3.09927 2.62755 3.47742 2.60906 3.73895 2.81241Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        you are visited 1
      </div>
      <div
        class="soui-modal-footer"
      >
        <button
          class="soui-button soui-button-secondary soui-button-button soui-button-outline"
          dir="ltr"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="soui-button soui-button-primary soui-button-button"
          dir="ltr"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about close 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: 400px;"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Modal Title
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        The prop maskCloseAble is  
        false
        .
        <br />
        You must click the button to close the Modal.
      </div>
      <div
        class="soui-modal-footer"
      >
        <button
          class="soui-button soui-button-secondary soui-button-button soui-button-outline"
          dir="ltr"
          type="button"
        >
          <span>
            Close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about container 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: 400px;"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Drawer Title
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.73895 2.81241L3.80175 2.86787L8 7.05665L12.2379 2.81922C12.4983 2.55888 12.9204 2.55888 13.1808 2.81922C13.4211 3.05955 13.4396 3.4377 13.2362 3.69923L13.1808 3.76203L8.94334 7.99998L13.1376 12.1948C13.398 12.4552 13.398 12.8773 13.1376 13.1376C12.8973 13.3779 12.5192 13.3964 12.2576 13.1931L12.1948 13.1376L8 8.94332L3.78745 13.1553C3.5271 13.4156 3.10499 13.4156 2.84464 13.1553C2.60432 12.9149 2.58583 12.5368 2.78918 12.2753L2.84464 12.2124L7.05667 7.99998L2.85894 3.81068C2.59859 3.55033 2.59859 3.12822 2.85894 2.86787C3.09927 2.62755 3.47742 2.60906 3.73895 2.81241Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        Drawer mount after Button
      </div>
      <div
        class="soui-modal-footer"
      >
        <button
          class="soui-button soui-button-secondary soui-button-button soui-button-outline"
          dir="ltr"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="soui-button soui-button-primary soui-button-button"
          dir="ltr"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about form 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: 456px;"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Form
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.73895 2.81241L3.80175 2.86787L8 7.05665L12.2379 2.81922C12.4983 2.55888 12.9204 2.55888 13.1808 2.81922C13.4211 3.05955 13.4396 3.4377 13.2362 3.69923L13.1808 3.76203L8.94334 7.99998L13.1376 12.1948C13.398 12.4552 13.398 12.8773 13.1376 13.1376C12.8973 13.3779 12.5192 13.3964 12.2576 13.1931L12.1948 13.1376L8 8.94332L3.78745 13.1553C3.5271 13.4156 3.10499 13.4156 2.84464 13.1553C2.60432 12.9149 2.58583 12.5368 2.78918 12.2753L2.84464 12.2124L7.05667 7.99998L2.85894 3.81068C2.59859 3.55033 2.59859 3.12822 2.85894 2.86787C3.09927 2.62755 3.47742 2.60906 3.73895 2.81241Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        <form
          class="soui-form soui-form-wrapper"
        >
          <div
            class="soui-form-item-wrapper soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="soui-form-item-label"
              style="width: 85px;"
            >
              Email
            </div>
            <div
              class="soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="soui-input soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                >
                  <input
                    class="soui-input-input"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="soui-form-item-wrapper soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="soui-form-item-label"
              style="width: 85px;"
            >
              Password
            </div>
            <div
              class="soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="soui-input soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                >
                  <input
                    class="soui-input-input"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="soui-modal-footer"
      >
        <div>
          <button
            class="soui-button soui-button-secondary soui-button-button soui-button-outline"
            dir="ltr"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="soui-button soui-button-primary soui-button-button"
            dir="ltr"
            type="button"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about full screen 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-full-screen soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Profile
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.73895 2.81241L3.80175 2.86787L8 7.05665L12.2379 2.81922C12.4983 2.55888 12.9204 2.55888 13.1808 2.81922C13.4211 3.05955 13.4396 3.4377 13.2362 3.69923L13.1808 3.76203L8.94334 7.99998L13.1376 12.1948C13.398 12.4552 13.398 12.8773 13.1376 13.1376C12.8973 13.3779 12.5192 13.3964 12.2576 13.1931L12.1948 13.1376L8 8.94332L3.78745 13.1553C3.5271 13.4156 3.10499 13.4156 2.84464 13.1553C2.60432 12.9149 2.58583 12.5368 2.78918 12.2753L2.84464 12.2124L7.05667 7.99998L2.85894 3.81068C2.59859 3.55033 2.59859 3.12822 2.85894 2.86787C3.09927 2.62755 3.47742 2.60906 3.73895 2.81241Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        <div>
          <form
            class="soui-form soui-form-wrapper"
          >
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Name
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-input soui-input-wrapper"
                  data-soui-input-border="true"
                >
                  <div
                    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                  >
                    <input
                      class="soui-input-input"
                      placeholder="please input name"
                      value="zhangsan"
                    />
                    <div
                      class="soui-input-clear-wrapper"
                    >
                      <span
                        class="soui-input-clear"
                        dir="ltr"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23Z"
                            fill="currentColor"
                          />
                          <path
                            d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
                            fill="white"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Password
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-input soui-input-wrapper"
                  data-soui-input-border="true"
                >
                  <div
                    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                  >
                    <input
                      class="soui-input-input"
                      placeholder="please input password"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Email
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-input soui-input-wrapper"
                  data-soui-input-border="true"
                >
                  <div
                    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                  >
                    <input
                      class="soui-input-input"
                      placeholder="please input email"
                      value="zhangsan@qq.com"
                    />
                    <div
                      class="soui-input-clear-wrapper"
                    >
                      <span
                        class="soui-input-clear"
                        dir="ltr"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23Z"
                            fill="currentColor"
                          />
                          <path
                            d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
                            fill="white"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Gendar
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-radio-group"
                >
                  <div
                    class="soui-radio soui-radio-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="radio"
                    />
                    <span
                      class="soui-radio-indicator-wrapper"
                    >
                      <span
                        class="soui-radio-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="soui-radio-desc"
                    >
                      male
                    </span>
                  </div>
                  <div
                    class="soui-radio soui-radio-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="radio"
                    />
                    <span
                      class="soui-radio-indicator-wrapper"
                    >
                      <span
                        class="soui-radio-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="soui-radio-desc"
                    >
                      female
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Course
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-checkbox-group"
                >
                  <div
                    class="soui-checkbox soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="soui-checkbox-indicator-wrapper"
                    >
                      <i
                        class="soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="soui-checkbox-desc"
                      data-soui-role="desc"
                    >
                      chinese
                    </span>
                  </div>
                  <div
                    class="soui-checkbox soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="soui-checkbox-indicator-wrapper"
                    >
                      <i
                        class="soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="soui-checkbox-desc"
                      data-soui-role="desc"
                    >
                      maths
                    </span>
                  </div>
                  <div
                    class="soui-checkbox soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="soui-checkbox-indicator-wrapper"
                    >
                      <i
                        class="soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="soui-checkbox-desc"
                      data-soui-role="desc"
                    >
                      english
                    </span>
                  </div>
                  <div
                    class="soui-checkbox soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="soui-checkbox-indicator-wrapper"
                    >
                      <i
                        class="soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="soui-checkbox-desc"
                      data-soui-role="desc"
                    >
                      physics
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Enrollment date
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-date-picker soui-datePicker-wrapper"
                  data-soui-input-border="true"
                  data-soui-type="date"
                >
                  <div
                    class="soui-datePicker-result-wrapper soui-datePicker-wrapper-padding-box soui-datePicker-wrapper-inner-title-top soui-datePicker-wrapper-inner-title-bottom"
                    tabindex="1"
                  >
                    <div
                      class="soui-datePicker-result"
                    >
                      <div
                        class="soui-datePicker-result-text-wrapper"
                      >
                        <div
                          class="soui-datePicker-result-text"
                        >
                          <span
                            class="soui-datePicker-result-text-padding"
                          >
                            <input
                              autocomplete="off"
                              placeholder="please select date"
                              readonly=""
                              value=""
                            />
                          </span>
                          <div
                            class="soui-datePicker-result-text-bg"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="soui-datePicker-icon"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M8.00195 2C8.55424 2 9.00195 2.44772 9.00195 3V4H15.002V3C15.002 2.44772 15.4497 2 16.002 2C16.5542 2 17.002 2.44772 17.002 3V4H20.002C20.9758 4 22.002 5.01582 22.002 6V20C22.002 20.9683 21.003 22 20.002 22H4.00195C2.98763 22 2.00195 20.9869 2.00195 20V6C2.00195 4.99158 2.9996 4 4.00195 4H7.00195V3C7.00195 2.44772 7.44967 2 8.00195 2ZM20.002 13C20.002 12.4477 19.5542 12 19.002 12H5.00195C4.44967 12 4.00195 12.4477 4.00195 13V19C4.00195 19.5523 4.44967 20 5.00195 20H19.002C19.5542 20 20.002 19.5523 20.002 19V13ZM7.00195 6H5.00195C4.44967 6 4.00195 6.44772 4.00195 7V9C4.00195 9.55228 4.44967 10 5.00195 10H19.002C19.5542 10 20.002 9.55228 20.002 9V7C20.002 6.44772 19.5542 6 19.002 6H17.002V7C17.002 7.55228 16.5542 8 16.002 8C15.4497 8 15.002 7.55228 15.002 7V6H9.00195V7C9.00195 7.55228 8.55424 8 8.00195 8C7.44967 8 7.00195 7.55228 7.00195 7V6Z"
                        />
                        <path
                          d="M9.59337 15.6868C9.59337 16.5152 8.92179 17.1868 8.09337 17.1868C7.26494 17.1868 6.59337 16.5152 6.59337 15.6868C6.59337 14.8583 7.26494 14.1868 8.09337 14.1868C8.92179 14.1868 9.59337 14.8583 9.59337 15.6868Z"
                        />
                        <path
                          d="M13.5348 15.6868C13.5348 16.5152 12.8632 17.1868 12.0348 17.1868C11.2063 17.1868 10.5348 16.5152 10.5348 15.6868C10.5348 14.8583 11.2063 14.1868 12.0348 14.1868C12.8632 14.1868 13.5348 14.8583 13.5348 15.6868Z"
                        />
                        <path
                          d="M17.4762 15.6868C17.4762 16.5152 16.8046 17.1868 15.9762 17.1868C15.1478 17.1868 14.4762 16.5152 14.4762 15.6868C14.4762 14.8583 15.1478 14.1868 15.9762 14.1868C16.8046 14.1868 17.4762 14.8583 17.4762 15.6868Z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Score
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-rate soui-rate-wrapper"
                >
                  <div
                    class="soui-rate-inner"
                  >
                    <div
                      class="soui-rate-item soui-rate-item-checked"
                    >
                      <span
                        class="soui-rate-item-bg"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="soui-rate-item-front"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="soui-rate-item soui-rate-item-checked"
                    >
                      <span
                        class="soui-rate-item-bg"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="soui-rate-item-front"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="soui-rate-item soui-rate-item-checked"
                    >
                      <span
                        class="soui-rate-item-bg"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="soui-rate-item-front"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="soui-rate-item"
                    >
                      <span
                        class="soui-rate-item-bg"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="soui-rate-item-front"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="soui-rate-item"
                    >
                      <span
                        class="soui-rate-item-bg"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="soui-rate-item-front"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                upload avatar
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-upload soui-upload-wrapper soui-upload-wrapper-image"
                >
                  <span
                    class="soui-upload-image-handler"
                    style="width: 80px; height: 80px;"
                  >
                    <div
                      class="soui-upload-image-handler-icon"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12.0317 4C12.5445 4.00067 12.9667 4.38727 13.0238 4.88468L13.0303 5.00131L13.022 11H19C19.5523 11 20 11.4477 20 12C20 12.5128 19.614 12.9355 19.1166 12.9933L19 13H13.02L13.012 19.0013C13.0113 19.5536 12.563 20.0007 12.0107 20C11.4979 19.9993 11.0757 19.6127 11.0186 19.1153L11.012 18.9987L11.02 13H5C4.44772 13 4 12.5523 4 12C4 11.4872 4.38604 11.0645 4.88338 11.0067L5 11H11.022L11.0304 4.99869C11.0311 4.44641 11.4794 3.99928 12.0317 4Z"
                        />
                      </svg>
                    </div>
                    <input
                      accept="image/*"
                      style="display: none;"
                      type="file"
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Address
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-textarea soui-textarea-wrapper"
                  data-soui-input-border="true"
                >
                  <textarea
                    class="soui-textarea-wrapper-padding-box soui-textarea-wrapper-inner-title-bottom soui-textarea-textarea"
                    rows="4"
                  />
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
              style="margin-top: 32px; margin-bottom: 0px;"
            >
              <div
                class="soui-form-item-label"
              />
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <button
                  class="soui-button soui-button-primary soui-button-button"
                  dir="ltr"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
                <button
                  class="soui-button soui-button-secondary soui-button-button soui-button-outline"
                  dir="ltr"
                  type="reset"
                >
                  <span>
                    Reset
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="soui-modal-footer"
      >
        <button
          class="soui-button soui-button-primary soui-button-button"
          dir="ltr"
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about hide mask 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-hide-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: 400px;"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Drawer Title
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.73895 2.81241L3.80175 2.86787L8 7.05665L12.2379 2.81922C12.4983 2.55888 12.9204 2.55888 13.1808 2.81922C13.4211 3.05955 13.4396 3.4377 13.2362 3.69923L13.1808 3.76203L8.94334 7.99998L13.1376 12.1948C13.398 12.4552 13.398 12.8773 13.1376 13.1376C12.8973 13.3779 12.5192 13.3964 12.2576 13.1931L12.1948 13.1376L8 8.94332L3.78745 13.1553C3.5271 13.4156 3.10499 13.4156 2.84464 13.1553C2.60432 12.9149 2.58583 12.5368 2.78918 12.2753L2.84464 12.2124L7.05667 7.99998L2.85894 3.81068C2.59859 3.55033 2.59859 3.12822 2.85894 2.86787C3.09927 2.62755 3.47742 2.60906 3.73895 2.81241Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        you are visited 1
      </div>
      <div
        class="soui-modal-footer"
      >
        <button
          class="soui-button soui-button-secondary soui-button-button soui-button-outline"
          dir="ltr"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="soui-button soui-button-primary soui-button-button"
          dir="ltr"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about position 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: auto;"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Form
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.73895 2.81241L3.80175 2.86787L8 7.05665L12.2379 2.81922C12.4983 2.55888 12.9204 2.55888 13.1808 2.81922C13.4211 3.05955 13.4396 3.4377 13.2362 3.69923L13.1808 3.76203L8.94334 7.99998L13.1376 12.1948C13.398 12.4552 13.398 12.8773 13.1376 13.1376C12.8973 13.3779 12.5192 13.3964 12.2576 13.1931L12.1948 13.1376L8 8.94332L3.78745 13.1553C3.5271 13.4156 3.10499 13.4156 2.84464 13.1553C2.60432 12.9149 2.58583 12.5368 2.78918 12.2753L2.84464 12.2124L7.05667 7.99998L2.85894 3.81068C2.59859 3.55033 2.59859 3.12822 2.85894 2.86787C3.09927 2.62755 3.47742 2.60906 3.73895 2.81241Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        <form
          class="soui-form soui-form-wrapper"
          style="width: 500px;"
        >
          <div
            class="soui-form-item-wrapper soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="soui-form-item-label"
              style="width: 100px;"
            >
              Email
            </div>
            <div
              class="soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="soui-input soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                >
                  <input
                    class="soui-input-input"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="soui-form-item-wrapper soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="soui-form-item-label"
              style="width: 100px;"
            >
              Password
            </div>
            <div
              class="soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="soui-input soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                >
                  <input
                    class="soui-input-input"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="soui-modal-footer"
      >
        <div>
          <button
            class="soui-button soui-button-secondary soui-button-button soui-button-outline"
            dir="ltr"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="soui-button soui-button-primary soui-button-button"
            dir="ltr"
            type="button"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about resizable 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: auto;"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Form
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.73895 2.81241L3.80175 2.86787L8 7.05665L12.2379 2.81922C12.4983 2.55888 12.9204 2.55888 13.1808 2.81922C13.4211 3.05955 13.4396 3.4377 13.2362 3.69923L13.1808 3.76203L8.94334 7.99998L13.1376 12.1948C13.398 12.4552 13.398 12.8773 13.1376 13.1376C12.8973 13.3779 12.5192 13.3964 12.2576 13.1931L12.1948 13.1376L8 8.94332L3.78745 13.1553C3.5271 13.4156 3.10499 13.4156 2.84464 13.1553C2.60432 12.9149 2.58583 12.5368 2.78918 12.2753L2.84464 12.2124L7.05667 7.99998L2.85894 3.81068C2.59859 3.55033 2.59859 3.12822 2.85894 2.86787C3.09927 2.62755 3.47742 2.60906 3.73895 2.81241Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        <form
          class="soui-form soui-form-wrapper"
          style="width: 500px;"
        >
          <div
            class="soui-form-item-wrapper soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="soui-form-item-label"
              style="width: 100px;"
            >
              Email
            </div>
            <div
              class="soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="soui-input soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                >
                  <input
                    class="soui-input-input"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="soui-form-item-wrapper soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="soui-form-item-label"
              style="width: 100px;"
            >
              Password
            </div>
            <div
              class="soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="soui-input soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                >
                  <input
                    class="soui-input-input"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="soui-modal-footer"
      >
        <div>
          <button
            class="soui-button soui-button-secondary soui-button-button soui-button-outline"
            dir="ltr"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="soui-button soui-button-primary soui-button-button"
            dir="ltr"
            type="button"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </div>
      <div
        class="soui-modal-resize-x"
        data-position="right"
      />
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about type 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: 500px;"
    >
      <div
        class="soui-modal-header"
      >
        <span
          class="soui-modal-header-icon soui-alert-icon soui-alert-success-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23ZM6.34315 13.8284L8.46305 15.9483C9.24511 16.7304 10.5122 16.7304 11.2943 15.9483L17.6569 9.58579C18.0472 9.19546 18.0472 8.5619 17.6569 8.17157C17.2665 7.78125 16.633 7.78125 16.2426 8.17157L10.5872 13.827C10.1962 14.218 9.56119 14.218 9.17016 13.827L7.75736 12.4142C7.36704 12.0239 6.73347 12.0239 6.34315 12.4142C5.95282 12.8045 5.95282 13.4381 6.34315 13.8284Z"
            />
          </svg>
        </span>
        <div
          class="soui-modal-header-title"
        >
          Drawer Title with success Icon
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 16 16"
          >
            <path
              d="M3.73895 2.81241L3.80175 2.86787L8 7.05665L12.2379 2.81922C12.4983 2.55888 12.9204 2.55888 13.1808 2.81922C13.4211 3.05955 13.4396 3.4377 13.2362 3.69923L13.1808 3.76203L8.94334 7.99998L13.1376 12.1948C13.398 12.4552 13.398 12.8773 13.1376 13.1376C12.8973 13.3779 12.5192 13.3964 12.2576 13.1931L12.1948 13.1376L8 8.94332L3.78745 13.1553C3.5271 13.4156 3.10499 13.4156 2.84464 13.1553C2.60432 12.9149 2.58583 12.5368 2.78918 12.2753L2.84464 12.2124L7.05667 7.99998L2.85894 3.81068C2.59859 3.55033 2.59859 3.12822 2.85894 2.86787C3.09927 2.62755 3.47742 2.60906 3.73895 2.81241Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body soui-modal-body-with-icon"
      >
        <span>
          Drawer type: 
        </span>
        <b>
          success
        </b>
      </div>
      <div
        class="soui-modal-footer"
      >
        <button
          class="soui-button soui-button-secondary soui-button-button soui-button-outline"
          dir="ltr"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="soui-button soui-button-primary soui-button-button"
          dir="ltr"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
